views/application.sass
// Variables
$black: #333
$red: #DF6C4F

// General styles
html
  height: 100%
  width: 100%

body
  position: fixed
  left: 0
  right: 0
  z-index: 0
  height: 100%
  width: 100%
  color: white
  font-size: 18px

.content:before
  content: ""
  position: fixed
  left: 0
  right: 0
  
  display: block
  width: 100%
  height: 100%
  background-size: cover
  background-repeat: no-repeat
  background-position: top center 
  background-attachment: fixed
  z-index: -1
  -webkit-filter: blur(5px)
  -moz-filter: blur(5px)
  -o-filter: blur(5px)
  -ms-filter: blur(5px)
  filter: blur(5px)

.content
  font-weight: 300
  font-family: 'Open Sans', helvetica, sans-serif
  padding-bottom: 4em
  background-color: rgba(0, 0, 0, 0.2)
  overflow: auto
  height: 100%
  width: 100%

a
  color: white
  &:hover
    color: white 

.app-name
  color: rgba(255, 255, 255, 0.9)
  font-size: 2em
  font-weight: normal
  font-variant: small-caps
  &:hover
    text-decoration: none

// Header
.small
  font-variant: normal
  font-size: 0.5em
  display: inline

.search-more
  border: 2px solid white
  font-weight: normal
  border-radius: 5px
  padding: 0.4em

  &:hover
    text-decoration: none
    color: white
    background: $red
    border-color: $red

// Footer
footer
  position: absolute
  bottom: 0
  width: 100%
  text-align: right
  padding: 1em inherit
  color: $black
  background: white
  font-size: 0.8em

  a, a:hover
    color: $black
    text-decoration: underline
    
.less-than-three
  color: $red

// Index page
.search-form
  color: $black

  input
    width: 17em
    padding: 0.5em
    border-radius: 3px
    border: 3px solid white
    margin-bottom: 1em

  button
    width: 10em
    padding: 0.5em
    border-radius: 3px
    color: white
    font-weight: normal
    background: rgba(0,0,0, 0)
    border: 3px solid white
    &:hover
      background: rgba($red, 0.5)
      border: 3px solid rgba($red, 0.5)
  .search-label
    padding-right: 0.5em

.hero
  font-size: 2.5em
  padding: 1em

.search-wrapper
  text-align: center
  margin: 0 auto

// Listen page
.artist-name-header
  font-weight: normal
  font-size: 1.7em

.artist-name
  font-weight: bold
  font-size: 1.8em

.listen-suggestion
  margin-bottom: 1em 
  font-size: 1.3em

.songs
  margin-bottom: 2em

.song-name
  font-size: 1.3em
  font-weight: normal
  &:hover
    text-decoration: underline
    cursor: pointer

.song-card
  margin-bottom: 1em

.source-link
  font-size: 0.8em

.share 
  input
    display: inline
    width: 20em

.current-song
  font-size: 1.5em

.current-song-name
  font-weight: normal

#myytplayer
  width: 100%

.next-song
  margin-left: 1em

.next-song, .prev-song
  &:hover
    cursor: pointer
    text-decoration: underline

@media only screen and (max-device-width: 480px)
  .controls  
    display: none

